--- a/common/css/about.css
+++ b/common/css/about.css
@@ -29,6 +29,9 @@ and open the template in the editor.
 }
 
 .About_Text_wrapper{
+    font-family: sans-serif;
+    line-height: 1.4em;
+
     margin: 7%;
     text-align: justify;
     display: block;
