--- a/common/css/app.css
+++ b/common/css/app.css
@@ -284,7 +284,7 @@ p a {
     background-color: #575756;
     box-shadow: 2px 0px 27px #000;
     height: 768px;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 /* line 65, sass/_global.sass */
